css/styles.css
/* Universal styling */

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

/* Colors */

:root {
	--clr-Vdark-grayish-blue: hsl(217, 19%, 35%);
	--clr-Vdark-grayish-blue-shadow: hsla(217, 19%, 35%, 0.384);
	--clr-desaturated-dark-blue: hsl(214, 17%, 51%);
	--clr-grayish-blue: hsl(212, 23%, 69%);
	--clr-light-grayish-blue: hsl(210, 46%, 95%);
}

/* General styling */

html {
	font-size: 62.5%;
}

body {
	font-family: "Manrope", sans-serif;
	font-size: 1.4rem;
}

.main_container {
	width: 100vw;
	height: 100vh;
	background-color: var(--clr-light-grayish-blue);
	display: flex;
	justify-content: center;
	align-items: center;
}

.container {
	border-radius: 15px;
	background-color: white;
	width: 87%;
	max-width: 390px;
	overflow: hidden;
	text-align: left;
}

/* Images */

.img_container {
	width: 100%;
	overflow: hidden;
}

.img {
	width: 100%;
	height: 100%;
	margin-bottom: -60px;
	margin-top: -13px;
}

.profile-pic {
	width: 4rem;
	border-radius: 100%;
}

.share_btn {
	margin-left: 5rem;
	outline: none;
	border: none;
	border-radius: 100%;
	padding: 0.8rem;
	transition: all 0.3s;
}

.btn-primary {
	background-color: var(--clr-light-grayish-blue);
}

.btn-secondary {
	background-color: var(--clr-desaturated-dark-blue);
}

.btn-secondary img {
	filter: brightness(0) invert(1);
}

.share_btn:hover {
	cursor: pointer;
}

/* Container content */

.content {
	padding: 2rem 2.5rem;
}

.header {
	font-size: 1.7rem;
	color: var(--clr-Vdark-grayish-blue);
	line-height: 2.6rem;
	max-width: 25ch;
	margin: 0 auto;
	padding-bottom: 1rem;
}

.paragraph {
	color: var(--clr-desaturated-dark-blue);
	line-height: 2.2rem;
	max-width: 31.5ch;
	margin: 0 auto;
}

/* Footer */

.footer-content {
	display: flex;
	width: 90%;
	justify-content: center;
	align-items: center;
	gap: 1.5rem;
	padding: 2rem 0rem 2rem;
	margin: 0 auto;
}

.user-name {
	font-size: 1.3rem;
	color: var(--clr-Vdark-grayish-blue);
	margin-bottom: 0.5rem;
}

.date {
	color: var(--clr-grayish-blue);
}

.footer-secondary {
	background-color: var(--clr-Vdark-grayish-blue);
	position: absolute;
	transform: translateY(10%);
	width: 87%;
	max-width: 390px;
	border-radius: 0 0 10px 10px;
	margin: 0 auto;
	justify-items: center;
	box-shadow: 0px 10px 20px var(--clr-Vdark-grayish-blue-shadow);
}

.title_share {
	font-weight: 500;
	font-size: 1.4rem;
	letter-spacing: 0.5rem;
	color: var(--clr-grayish-blue);
}

/* Hide feature */

.hide {
	display: none;
}

/* Desktop screen size */

@media screen and (min-width: 1050px) {
	.container {
		display: flex;
		flex-direction: row;
		max-width: 850px;
		max-height: 300px;
	}

	.img_container {
		width: 40%;
		overflow: hidden;
	}

	.img {
		width: 125%;
		height: 100%;
		margin-bottom: 0px;
		margin-top: 0px;
		margin-right: 0px;
		margin-left: -8px;
	}

	.card-content {
		width: 60%;
		padding-left: 5rem;
	}

	.content {
		padding: 4rem 0 3rem;
		margin: 0 auto;
	}

	.header {
		font-size: 2rem;
		margin: 0;
		max-width: 26ch;
		padding-bottom: 0;
	}

	.paragraph {
		margin: 1.5rem 0;
		max-width: 45ch;
	}

	.footer-content {
		justify-content: center;
		padding: 0;
		width: 100%;
	}

	.share_btn {
		margin-left: 17rem;
	}

	.btn-primary {
		margin-left: 200px;
		margin-right: 20px;
	}

	.btn-secondary {
		position: absolute;
		transform: translate(700%, 11%);
	}

	.footer-content-primary {
		margin-left: -10px;
	}

	.footer-secondary {
		padding: 1.8rem;
		border-radius: 10px;
		transform: translate(120%, -190%);
		max-width: 230px;
	}

	.footer-secondary::before {
		content: "";
		position: absolute;
		width: 0;
		height: 0;
		border-top: 25px solid var(--clr-Vdark-grayish-blue);
		border-right: 25px solid transparent;
		border-left: 25px solid transparent;
		margin: 26px 0 0 0px;
		left: 100px;
	}
}

